# fledge-plugin-atlas

./: .gitignore  .trust.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  action.yml  fledge.toml  plugin.toml
.claude/: scratch_fledge.json
.github/workflows/: ci.yml  pages.yml  trust.yml
.specsync/: adoption-report.json  config.toml  registry.toml  sdd.json
.specsync/changes/CHG-0001-adopt-trust-1-and-specsync-5/: approvals.json  change.md  context.md  state.json  tasks.md  verification.json
crates/atlas-cli/: Cargo.toml
crates/atlas-cli/src/: main.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: components.js  depgraph.js  lib.rs  since.js
crates/atlas-wasm/: Cargo.toml
crates/atlas-wasm/src/: lib.rs
specs/: components.spec.md  delight.spec.md  depgraph.spec.md  engine.spec.md  graph.spec.md  since.spec.md  style.spec.md  threemd.spec.md
specs/authworker/: authworker.spec.md
specs/components/: components.spec.md  context.md  requirements.md  tasks.md  testing.md
specs/delight/: context.md  delight.spec.md  requirements.md  tasks.md  testing.md
specs/depgraph/: context.md  depgraph.spec.md  requirements.md  tasks.md  testing.md
specs/engine/: context.md  engine.spec.md  requirements.md  tasks.md  testing.md
specs/graph/: context.md  graph.spec.md  requirements.md  tasks.md  testing.md
specs/since/: context.md  requirements.md  since.spec.md  tasks.md  testing.md
specs/style/: context.md  requirements.md  style.spec.md  tasks.md  testing.md
specs/threemd/: context.md  requirements.md  tasks.md  testing.md  threemd.spec.md
specs/wasm/: wasm.spec.md
specs/webapp/: webapp.spec.md
src/: components.js  delight.js  depgraph.js  graph.js  main.rs  style.css  threemd.js
web/app/: README.md  app.css  app.js  config.js  index.html
web/auth-worker/: README.md  wrangler.toml
web/auth-worker/src/: worker.js
