[package]
name = "fledge-plugin-atlas"
version = "0.1.1"
edition = "2021"
rust-version = "1.89"
description = "Local HTML atlas of a project: spec coverage, code, and how specs and source overlap."
license = "MIT"
authors = ["0xLeif"]
repository = "https://github.com/CorvidLabs/fledge-plugin-atlas"

[[bin]]
name = "fledge-atlas"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
