[workspace]
resolver = "2"
members = ["crates/atlas-core", "crates/atlas-cli"]

# The WASM bindings crate is built on its own via wasm-pack (a cdylib for
# wasm32-unknown-unknown), so it is excluded from the default host build.
exclude = ["crates/atlas-wasm"]

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
