[package]
name = "atlas-wasm"
version = "0.1.5"
edition = "2021"
rust-version = "1.89"
description = "WASM bindings for the fledge atlas engine: render(projectJson) -> self-contained HTML."
license = "MIT"
authors = ["0xLeif"]
repository = "https://github.com/CorvidLabs/fledge-plugin-atlas"

[lib]
crate-type = ["cdylib"]

# wasm-pack ships a wasm-opt too old to validate the bulk-memory ops current
# Rust emits, so skip it. rustc already size-optimizes via the release profile
# below (opt-level "s" + LTO + strip).
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
atlas-core = { path = "../atlas-core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
console_error_panic_hook = "0.1"

# atlas-wasm is excluded from the root workspace (it targets wasm32 only), so it
# carries its own release profile tuned for a small browser payload.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
